# medical-ultrasound-systems

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  phase2_single_point_benchmark.py  phase3_robustness_sweep.py
data/: README.md
docs/: architecture.md  benchmarks.md  index.md  regulatory-positioning.md  roadmap.md  theory.md  validation.md
examples/: basic_quaternion_wavefield_demo.py  coherence_metric_demo.py  phase1_pulse_echo_demo.py  phase2_quaternionic_alignment_demo.py  phase3_perturbation_demo.py
notebooks/: README.md
src/medical_ultrasound_systems/: __init__.py  analytic.py  beamforming.py  coherence.py  delay.py  evaluation.py  experiments.py  geometry.py  metrics.py  perturbation.py  perturbations.py  phantom.py  pulse.py  qbeamforming.py  quaternion.py  qwavefield.py  reconstruction.py  reporting.py  simulation.py  wavefield.py
tests/: test_analytic.py  test_beamforming_phase1.py  test_coherence.py  test_delay.py  test_docs_positioning.py  test_evaluation.py  test_experiments.py  test_geometry.py  test_metrics.py  test_perturbation.py  test_perturbations.py  test_phantom.py  test_pulse.py  test_qbeamforming.py  test_quaternion.py  test_qwavefield.py  test_reporting.py  test_simulation_phase1.py  test_wavefield.py
